--- a/css/common.css
+++ b/css/common.css
@@ -6,3 +6,12 @@ h2 {
     padding-bottom: 10px;
     padding-left: 50px;
 }
+
+.musician {
+    display: block;
+    width: 90%;
+    margin: 15px;
+    padding: 15px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
